[package]
name = "sbbp-api"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.75"
axum = { version = "0.7.3", features = ["tokio", "http1", "http2", "macros"] }
axum-extra = { version = "0.9.2", features = ["query"] }
axum-htmx = "0.5.0"
axum-jsonschema = "0.8.0"
axum-sqlx-tx = { version = "0.8.0", features = ["postgres", "runtime-tokio-rustls"] }
# axum-sqlx-tx = { version = "0.8.0", features = ["postgres", "runtime-tokio-rustls"] }
backon = "0.4.3"
bytes = "1.5.0"
chrono = "0.4.33"
clap = { version = "4.4.11", features = ["env", "derive"] }
dotenvy = "0.15.7"
effectum = "0.6.0"
error-stack = { version = "0.4.1", features = ["spantrace"] }
eyre = "0.6.11"
# filigree = { version = "0.1.0", features = ["sentry", "htmx", "maud", "watch-manifest"] }
#filigree = { git = "https://github.com/dimfeld/filigree.git" }
filigree = { path = "../filigree/filigree", features = ["sentry", "htmx", "maud", "watch-manifest"] }
futures = "0.3.30"
http = "1.0.0"
hyper = { version = "1.1.0", features = ["server", "http1", "http2"] }
image = "0.25.0"
image-compare = "0.4.0"
itertools = "0.12.1"
maud = { version = "0.26.0", features = ["axum"] }
md-icons = { version = "0.3.2", features = ["maud"] }
percent-encoding = "2.3.1"
reqwest = { version = "0.11.23", features = ["cookies", "json"] }
rust-embed = "8.1.0"
schemars = { version = "0.8.16", features = ["chrono", "url", "uuid1"] }
schemars-zod = "0.1.5"
sentry = { version = "0.32.2", features = ["tokio", "tower", "tower-http", "tower-axum-matched-path", "tracing"] }
sentry-tower = { version = "0.32.2", features = ["http", "axum-matched-path"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.113"
serde_with = { version = "3.6.1", features = ["json", "schemars_0_8"] }
sqlx = { version = "0.7.3", features = ["chrono", "postgres"] }
sqlx-transparent-json-decode = "2.2.2"
temp-dir = "0.1.13"
tera = "1.19.1"
thiserror = "1.0.56"
time = "0.3.34"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["fs"] }
tower = "0.4.13"
tower-cookies = "0.10.0"
tower-http = { version = "0.5.1", features = ["compression-full", "full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }
url = "2.5.0"
uuid = "1.6.1"
webp = "0.2.7"

[dev-dependencies]
temp-dir = "0.1.13"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.dev.package.maud_macros]
opt-level = 3

[profile.dev.package.image]
opt-level = 3

[profile.dev.package.image-compare]
opt-level = 3

[profile.dev.package.tokio]
opt-level = 3

[profile.dev.package.webp]
opt-level = 3
