[project]
name = "sbbp"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Daniel Imfeld", email = "daniel@imfeld.dev" }
]
dependencies = [
    "transformers>=4.35.2",
    "torch>=2.1.1",
    "accelerate>=0.24.1",
    "scikit-image>=0.21.0",
    "opencv-python>=4.8.1.78",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
whisper = "sbbp.whisper:run"
compare-images = "sbbp.compare_images:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.1.5",
]

[tool.hatch.metadata]
allow-direct-references = true
